unpackaged/objects/Complaints__c.object
<CustomObject>
    <fields>
        <fullName>AKA__c</fullName>
        <description>Also Known As</description>
        <label>AKA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Receive_Date__c</fullName>
        <label>Actual Receive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Received_Month__c</fullName>
        <formula>MONTH( DATEVALUE( Actual_Receive_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Received Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Received_Year__c</fullName>
        <formula>YEAR( DATEVALUE( Actual_Receive_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Received Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Solid_Waste_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Solid Waste</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agricultural_Commissioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agricultural Commissioner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaints (Agricultural Commissioner)</relationshipLabel>
        <relationshipName>ComplaintsAccountAgCommissioner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Air_Complaint_Source_Info__c</fullName>
        <label>Air Complaint Source Info</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Vehicle_or_Stationary__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cars</fullName>
                </value>
                <value>
                    <fullName>Trucks</fullName>
                </value>
                <value>
                    <fullName>Off Road Equipment</fullName>
                </value>
                <value>
                    <fullName>Other Vehicles</fullName>
                </value>
                <value>
                    <fullName>Dust</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
                <value>
                    <fullName>Odors</fullName>
                </value>
                <value>
                    <fullName>Gas Stations</fullName>
                </value>
                <value>
                    <fullName>Painting</fullName>
                </value>
                <value>
                    <fullName>Asbestos</fullName>
                </value>
                <value>
                    <fullName>Other Stationary Sources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Air_District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Air District</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaints (Air Recommended Routing Partner)</relationshipLabel>
        <relationshipName>Complaints2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Air__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you have a general air pollution complaint, which includes open burning, stationary source emissions, fugitive dust emissions, and gasoline nozzles.</inlineHelpText>
        <label>Air</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the person submitting the complaint would like to remain anonymous, check this box here.</inlineHelpText>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDO_For_Report__c</fullName>
        <formula>if( Number_of_BDOs__c   &gt; 1, &apos;Multi-BDO&apos;
, if( Air__c ,&apos;Air&apos;
     , if( Solid_Waste__c , &apos;Solid Waste&apos;
          , if( Pesticides__c , &apos;Pesticides&apos;
               , if( Toxic_Substances__c ,&apos;Toxic Substances&apos;
                    ,if( Water__c ,&apos;Water&apos;,&apos;&apos;
                     )
                  )
             )
        )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDO For Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottles_Cans_Recycling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bottles/Cans Recycling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CUPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CUPA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaints (Toxics Recommended Routing Partner)</relationshipLabel>
        <relationshipName>Complaints3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CalEnviroScreen_Score_Percentile_Rank__c</fullName>
        <label>CalEnviroScreen Score Percentile Rank</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalEnviroScreen_Score__c</fullName>
        <label>CalEnviroScreen Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalRecycle_Subtype__c</fullName>
        <label>Z_CalRecycle Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Private Residence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CalRecycle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalRecycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Tract_Number__c</fullName>
        <label>Census Tract Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Populated via workflow when the child complaint&apos;s status is changed to closed. JMC 2-15-2016</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complainant_Email__c</fullName>
        <description>Email of the Complainant</description>
        <formula>Complainant__r.PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complainant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Mailing_City__c</fullName>
        <formula>Complainant__r.PersonMailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complainant Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Mailing_State__c</fullName>
        <formula>Complainant__r.PersonMailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complainant Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Mailing_Street__c</fullName>
        <formula>Complainant__r.PersonMailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complainant Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Mailing_Zip_Code__c</fullName>
        <formula>Complainant__r.PersonMailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complainant Mailing Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Mobile_Phone__c</fullName>
        <formula>Complainant__r.PersonMobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complainant Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Phone__c</fullName>
        <formula>Complainant__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complainant Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complainant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complaint_Location_Address__c</fullName>
        <inlineHelpText>Complaint location address or intersection</inlineHelpText>
        <label>Complaint Location Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Location_City__c</fullName>
        <inlineHelpText>City of the complaint location</inlineHelpText>
        <label>Complaint Location City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Location_County__c</fullName>
        <inlineHelpText>County where the complaint occurred</inlineHelpText>
        <label>Complaint Location County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda County</fullName>
                </value>
                <value>
                    <fullName>Alpine County</fullName>
                </value>
                <value>
                    <fullName>Amador County</fullName>
                </value>
                <value>
                    <fullName>Butte County</fullName>
                </value>
                <value>
                    <fullName>Calaveras County</fullName>
                </value>
                <value>
                    <fullName>Colusa County</fullName>
                </value>
                <value>
                    <fullName>Contra Costa County</fullName>
                </value>
                <value>
                    <fullName>Del Norte County</fullName>
                </value>
                <value>
                    <fullName>El Dorado County</fullName>
                </value>
                <value>
                    <fullName>Fresno County</fullName>
                </value>
                <value>
                    <fullName>Glenn County</fullName>
                </value>
                <value>
                    <fullName>Humboldt County</fullName>
                </value>
                <value>
                    <fullName>Imperial County</fullName>
                </value>
                <value>
                    <fullName>Inyo County</fullName>
                </value>
                <value>
                    <fullName>Kern County</fullName>
                </value>
                <value>
                    <fullName>Kings County</fullName>
                </value>
                <value>
                    <fullName>Lake County</fullName>
                </value>
                <value>
                    <fullName>Lassen County</fullName>
                </value>
                <value>
                    <fullName>Los Angeles County</fullName>
                </value>
                <value>
                    <fullName>Madera County</fullName>
                </value>
                <value>
                    <fullName>Marin County</fullName>
                </value>
                <value>
                    <fullName>Mariposa County</fullName>
                </value>
                <value>
                    <fullName>Mendocino County</fullName>
                </value>
                <value>
                    <fullName>Merced County</fullName>
                </value>
                <value>
                    <fullName>Modoc County</fullName>
                </value>
                <value>
                    <fullName>Mono County</fullName>
                </value>
                <value>
                    <fullName>Monterey County</fullName>
                </value>
                <value>
                    <fullName>Napa County</fullName>
                </value>
                <value>
                    <fullName>Nevada County</fullName>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Location_Parcel_Number__c</fullName>
        <description>Parcel number of the complaint location - requested for Water complaints</description>
        <label>Complaint Location Parcel Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Location_State__c</fullName>
        <label>Complaint Location State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>California</fullName>
                    <default>true</default>
                    <label>California</label>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Location_Zip_Code__c</fullName>
        <inlineHelpText>Zip Code where the complaint occurred</inlineHelpText>
        <label>Complaint Location Zip Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Location__c</fullName>
        <label>Complaint Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Complaint_Source__c</fullName>
        <label>Complaint Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Self Generated</fullName>
                </value>
                <value>
                    <fullName>Hardcopy Letter</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email_for_notifications__c</fullName>
        <label>Contact Email for notifications</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_Referred__c</fullName>
        <label>Date Referred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_Occurrence__c</fullName>
        <inlineHelpText>Date and approximate time of when the occurrence happened</inlineHelpText>
        <label>Date and Time of Occurrence</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Open_Decimal__c</fullName>
        <formula>IF(TEXT(Status__c) = &quot;Closed/Actions Taken&quot;, NOW() - CreatedDate , NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open Decimal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(TEXT(Status__c) = &quot;Closed/Actions Taken&quot;, ROUND(Closed_Date__c - DATEVALUE(Actual_Receive_Date__c),0), ROUND(TODAY() - DATEVALUE(Actual_Receive_Date__c),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Close__c</fullName>
        <description>Number of Days From Creation To Closed. JMC 02-16-2016</description>
        <formula>Closed_Date__c-DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Refer__c</fullName>
        <formula>Date_Referred__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Refer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Refer_or_Close__c</fullName>
        <formula>IF
(
AND
(
ISBLANK(Date_Referred__c - DATEVALUE(CreatedDate)),
ISBLANK(Closed_Date__c- DATEVALUE(CreatedDate))
),
NULL,
IF
(
ISBLANK(Date_Referred__c - DATEVALUE(CreatedDate)),
Closed_Date__c- DATEVALUE(CreatedDate),
IF
(
ISBLANK(Closed_Date__c- DATEVALUE(CreatedDate)),
Date_Referred__c - DATEVALUE(CreatedDate),
MIN(Date_Referred__c - DATEVALUE(CreatedDate),Closed_Date__c- DATEVALUE(CreatedDate))
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Refer or Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drinking_Water__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Bad taste, odors, or contamination in water supplied to your house or business; or concerns about your cityâ€™s water supply system or your municipal water supplier operations.</inlineHelpText>
        <label>Drinking Water</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EJ_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the complaint have to do with Environmental Justice issues?</inlineHelpText>
        <label>EJ Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EJ_Flag__c</fullName>
        <formula>IF( EJ_Complaint__c = TRUE, 
IMAGE(&apos;/img/samples//flag_red.gif&apos;, &apos;Red Flag&apos;),&quot; &quot; 
)</formula>
        <label>EJ Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESTOR_COMPLAINT_ID__c</fullName>
        <externalId>true</externalId>
        <label>EnviroStor ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Quarter__c</fullName>
        <formula>IF
        (
        OR
        (
        MONTH(DATEVALUE(CreatedDate))=1,
        MONTH(DATEVALUE(CreatedDate))=2,
        MONTH(DATEVALUE(CreatedDate))=3
        ),
        DATE(YEAR(DATEVALUE(CreatedDate)),3,31),
        IF
        (
        OR
        (
        MONTH(DATEVALUE(CreatedDate))=4,
        MONTH(DATEVALUE(CreatedDate))=5,
        MONTH(DATEVALUE(CreatedDate))=6
        ),
        DATE(YEAR(DATEVALUE(CreatedDate)),6,30),


        IF
        (
        OR
        (
        MONTH(DATEVALUE(CreatedDate))=7,
        MONTH(DATEVALUE(CreatedDate))=8,
        MONTH(DATEVALUE(CreatedDate))=9
        ),
        DATE(YEAR(DATEVALUE(CreatedDate)),9,30),
        DATE(YEAR(DATEVALUE(CreatedDate)),12,31)
        )
        )
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End of Quarter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Year__c</fullName>
        <formula>DATE( YEAR( DATEVALUE( CreatedDate ) ) ,12,31)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End of Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_become_aware_of_incident__c</fullName>
        <label>How did you become aware of the incident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LEA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaints (Solid Waste Recommended Routing Partner)</relationshipLabel>
        <relationshipName>Complaints4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <label>Location Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Map_Display__c</fullName>
        <formula>IF( OR( ISBLANK(  Complaint_Location__Latitude__s  ) , ISBLANK(  Complaint_Location__Longitude__s  ) ) , &quot;Missing Coordinates&quot;, IMAGE( Map_Link__c , &quot;&quot;, 300,300))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Link__c</fullName>
        <formula>&quot;http://maps.googleapis.com/maps/api/staticmap?center=&quot; &amp; TEXT( Complaint_Location__Latitude__s) &amp; &quot;,&quot; &amp; TEXT( Complaint_Location__Longitude__s ) &amp; &quot;&amp;zoom=12&amp;size=300x300&amp;sensor=true&amp;markers=color:red%7Clabel:A%7C&quot;&amp; TEXT(Complaint_Location__Latitude__s) &amp; &quot;,&quot; &amp; TEXT(Complaint_Location__Longitude__s)&amp; &quot;&amp;key=AIzaSyAGRAK-dDnksBV_8dDxYI2cc7s64Pd0HqE&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Affected_Water_Source__c</fullName>
        <inlineHelpText>Stream, river, lake, bay, groundwater basin, or coastal area</inlineHelpText>
        <label>Name of Affected Water Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nature_of_Pesticides_Report__c</fullName>
        <label>Nature of Pesticides Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pesticide Misuse</fullName>
                </value>
                <value>
                    <fullName>Violation of Pesticide Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_BDOs__c</fullName>
        <formula>if( Air__c ,1,0) + if( CalRecycle__c , 1,0) + if( Pesticides__c , 1,0) + if( Solid_Waste__c , 1, 0) + if( Toxic_Substances__c ,1,0) + if( Water__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of BDOs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_going_Occurrence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this complaint an on-going occurrence?</inlineHelpText>
        <label>On-going Occurrence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Complaint_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Complaint ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_Relationship__c</fullName>
        <description>For Toxics</description>
        <label>Other Relationship</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Water_Related_Concerns__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Examples are misuse of water project grants or loans, or misconduct by wastewater treatment plant operators.</inlineHelpText>
        <label>Other Water Related Concerns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pesticides__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark this check box if the complaint is a pesticides related issue</inlineHelpText>
        <label>Pesticides</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Organizations__c</fullName>
        <label>Other Organizations Referred To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_Agencies__c</fullName>
        <description>For EnviroStor integration</description>
        <label>Referred Agencies</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaints (Referring Account)</relationshipLabel>
        <relationshipName>Complaints1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Agency__c</fullName>
        <label>Referring Agency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Email_Address__c</fullName>
        <description>Email address of the person (usually outside Cal EPA) that entered this complaint</description>
        <label>Person Referring&apos;s Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referring_Name__c</fullName>
        <label>Name of Person Referring</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for website to show or hide referral agency fields</inlineHelpText>
        <label>Referring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refinery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refinery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Water_Board__c</fullName>
        <label>Regional Water Board</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Responsible_Party__c</fullName>
        <label>Relationship to Responsible Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Employee</fullName>
                </value>
                <value>
                    <fullName>Previous Employee</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                </value>
                <value>
                    <fullName>Neighbor</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported_to_CAC__c</fullName>
        <description>CAC = County Agriculture Commission</description>
        <label>Reported to CAC?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Contact__c</fullName>
        <description>For EnviroStor integration</description>
        <label>Response Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Type_Date__c</fullName>
        <description>For EnviroStor integration</description>
        <label>Response Type Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <description>For EnviroStor integration</description>
        <label>Response Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_City__c</fullName>
        <label>Responsible Party City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_Company__c</fullName>
        <label>Responsible Party Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_Name__c</fullName>
        <label>Responsible Party Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_Phone__c</fullName>
        <label>Responsible Party Phone</label>
        <type>Phone</type>
    </fields>
</CustomObject>